fix: background, font size on small screen

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -7,8 +7,6 @@
 	--color-theme-1: #ff3e00;
 	--color-theme-2: #4075a6;
 	--color-text: rgba(0, 0, 0, 0.7);
-	--column-width: 42rem;
-	--column-margin-top: 4rem;
 
 	font-family: var(--font-body);
 	color: var(--color-text);
@@ -34,15 +32,11 @@
 
 
 body {
-	/* height: 100vh; */
-	/* background-attachment: fixed; */
-	/* background-size: 100vw 100vh; */
 	margin: 0;
-	background-color: var(--color-bg-1);
-	background-image: radial-gradient(50% 50% at 50% 50%,
-			rgba(255, 255, 255, 0.75) 0%,
-			rgba(255, 255, 255, 0) 100%),
-		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
+	min-height: 100vh;
+	background-attachment: fixed;
+	background: linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
+	background-repeat: no-repeat;
 }
 
 h1,
